# lingua-franca

./: Design.md  Developer_Help_Manual.md  Makefile  Makefile.in  ProjectHome.md  README  Requirements.md  UserHelpManual.md  aclocal.m4  config.status  configure.in
autom4te.cache/: output.0
po/: Makefile.in
repos/trunk/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.in  lingua-franca.spec.in
repos/trunk/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
repos/trunk/config/: babel.xml  google.xml
repos/trunk/po/: Makefile  Makefile.in  POTFILES  POTFILES.in
repos/trunk/src/: .interface.c.swp  Makefile.am  Makefile.in
repos/trunk/src/.deps/: callbacks.Po  interface.Po  main.Po
repos/trunk/src/config/: altavista.xml  babel.xml  google.xml
repos/trunk/src/core/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.h  lingua-franca.c  lingua-franca.h  main.c  support.h  translate.c  translate.h  xml-translate.c  xml-translate.h  xml-ui.c  xml-ui.h
repos/trunk/src/core/.deps/: callbacks.Po  interface.Po  lingua-franca.Po  main.Po  support.Po  xml-translate.Po  xml-ui.Po
repos/trunk/src/lib/: Makefile.am  lf-uninstalled.pc.in  lf.c  lf.h  lf.pc.in  xml-translate.c  xml-translate.h
repos/trunk/src/lib/.deps/: translate.Po  xml-translate.Po
repos/trunk/src/pidgin/: Makefile.am  plugin.c  translate.c
repos/trunk/src/ui/: callbacks.c  callbacks.h  interface.c  interface.h  lingua-franca.c  lingua-franca.h  support.c  xml-ui.c
repos/trunk/test/: Makefile.am  Makefile.in  compile.sh  linguafranca_test.c  read-config-xml.c  translate-test.c  translate.c
src/core/: Makefile.in  callbacks.c  callbacks.h  interface.c  interface.h  main.c  support.c  support.h
wiki/: Design.wiki  Developer_Help_Manual.wiki  Requirements.wiki  UserHelpManual.wiki
